タグを整理

--- a/content/2016-12-15_about.md
+++ b/content/2016-12-15_about.md
@@ -4,7 +4,7 @@ lastmod = "2017-09-03"
 title = "このブログについて"
 slug = "about"
 tags = [
-  "other"
+  "info"
 ]
 thumbnail = "images/author.jpg"
 draft = false
