--- a/content/2016-12-16_大阪へのJターン転職活動.md
+++ b/content/2016-12-16_大阪へのJターン転職活動.md
@@ -4,7 +4,8 @@ lastmod = "2017-02-05"
 title = "大阪へのJターン転職活動"
 slug = "job_hunting"
 tags = [
-  "career"
+  "career",
+  "advent-calendar"
 ]
 thumbnail = "images/job_hunting1.jpg"
 toc = false
