--- a/content/2016-12-28_ギラン・バレー症候群闘病記.md
+++ b/content/2016-12-28_ギラン・バレー症候群闘病記.md
@@ -4,7 +4,7 @@ lastmod = "2016-12-28"
 title = "ギラン・バレー症候群闘病記"
 slug = "guillanbarre"
 tags = [
-  "other"
+  "diary"
 ]
 thumbnail = "images/guillanbarre1.jpg"
 toc = false
