--- a/content/2017-01-04_阪急ぐるっと初詣パスで寺社巡り.md
+++ b/content/2017-01-04_阪急ぐるっと初詣パスで寺社巡り.md
@@ -4,7 +4,7 @@ lastmod = "2017-01-13"
 title = "阪急ぐるっと初詣パスで寺社巡り"
 slug = "hatsumode"
 tags = [
-  "other"
+  "diary"
 ]
 thumbnail = "images/hatsumode1.jpg"
 toc = false
