--- a/content/2017-02-05_ソニーでカメラのイメージセンサー清掃サービスを受けてきた.md
+++ b/content/2017-02-05_ソニーでカメラのイメージセンサー清掃サービスを受けてきた.md
@@ -4,7 +4,7 @@ lastmod = "2017-02-05"
 draft = false
 slug = "sony_service_station"
 tags = [
-  "other"
+  "camera"
 ]
 title = "ソニーでカメラのイメージセンサー清掃サービスを受けてきた"
 thumbnail = "images/sony_service_station1.jpg"
