--- a/content/2017-12-24_アイキャッチメイカーを作った.md
+++ b/content/2017-12-24_アイキャッチメイカーを作った.md
@@ -4,7 +4,8 @@ lastmod = "2019-01-09"
 title = "アイキャッチ作成ツールをHTML+CSS+JSで作った"
 slug = "eye_catch_maker"
 tags = [
-  "frontend"
+  "frontend",
+  "advent-calendar"
 ]
 
 thumbnail = "images/eye_catch_maker1.png"
