--- a/content/2018-12-23_ラズパイ固定アドレス.md
+++ b/content/2018-12-23_ラズパイ固定アドレス.md
@@ -4,7 +4,8 @@ lastmod = "2019-01-12"
 title = "Raspberry Piで固定IPアドレス"
 slug = "raspberrypi_ipaddress"
 tags = [
-  "raspberrypi"
+  "raspberrypi",
+  "advent-calendar"
 ]
 thumbnail = "images/logo_raspberrypi.png"
 toc = true
