english-phraseの記事を修正

--- a/content/2019-02-08_スカイプ英会話フレーズ集.md
+++ b/content/2019-02-08_スカイプ英会話フレーズ集.md
@@ -1,6 +1,6 @@
 +++
 date = "2019-02-08"
-lastmod = "2019-02-08"
+lastmod = "2019-02-15"
 title = "スカイプ英会話フレーズ集"
 slug = "english-phrase"
 tags = [
@@ -14,13 +14,14 @@ draft = false
 スカイプ英会話フレーズ集です。  
 勉強するたびに増やして行きます。
 
-## わかりました系フレーズ
+## あいづち
+### わかりました系フレーズ
 I see.  
 I got it.  
 I understood.  
-It's my first time to hear this word.  
+No other questions.
 
-## そうですね系フレーズ
+### そうですね系フレーズ
 Right.  
 You're right.  
 That’s true.  
@@ -34,21 +35,59 @@ I think so too.
 Me too.  
 I agree with you.
 
-## 良いですね系フレーズ
+### 良いですね系フレーズ
 You must be fun.  
 You must have fun.  
 That's a good idea.  
 That's interesting.  
 That sounds good.  
 
-## わかりません系フレーズ
-__ is not clear.  
-It is difficult for me to pronounce __ .  
-What does it mean?  
-I am confused.
-
-## そうなの？系フレーズ
+### そうなの？系フレーズ
 Really?  
 Is that so?  
 Is that right?
+
+## スモールトーク
+### フリートークしよう
+Lets have free talking.  
+I want free talking.
+
+### 天気について
+It is snowing.  
+It is snowy.  
+It snowed heavily 2 days ago.  
+It will be sunny tomorrow.
+
+### 風邪は大丈夫？
+Are you feeling better now?  
+How are you feeling now?
+
+## レッスン
+
+### わかりません
+__ is not clear.  
+It is difficult for me to pronounce __ .  
+What does it mean?  
+I am confused.  
+I have three words that I don't understand.
+
+### ちょっと調べます
+Let me search it on the internet.  
+I will check it on the internet.
+
+### これが正解だと思う/思わない
+It's likely the answer.  
+I think this is not correct.  
+I think the answer is not __ .  
+I'm sure with the answer.
+
+### 例をください
+Could you give me an example?  
+Could you type in the chat box?
+
+### 勉強になります
+It's my first time to hear this word.  
+That’s new for me.  
+Your explanation was very clear.  
+It was very useful.
 
