アイキャッチをいくつか置き換え

--- a/content/2017-11-18_MacOSアップデートでgitエラー.md
+++ b/content/2017-11-18_MacOSアップデートでgitエラー.md
@@ -6,7 +6,7 @@ slug = "invalid-active-developer-path"
 tags = [
   "macos"
 ]
-thumbnail = ""
+thumbnail = "images/logo_macos.png"
 toc = false
 draft = false
 +++
