免責事項とプライバシーポリシーを修正

--- a/content/2019-03-15_免責事項.md
+++ b/content/2019-03-15_免責事項.md
@@ -1,6 +1,6 @@
 +++
 date = "2019-03-15"
-lastmod = "2019-03-15"
+lastmod = "2019-03-19"
 title = "免責事項"
 slug = "notice"
 tags = [
@@ -10,7 +10,13 @@ thumbnail = ""
 draft = false
 +++
 
-zzzmisa.com、及びサブドメインで公開しているサイト（以下「当サイト」）に掲載されている情報は、内容の正確性を保証しておりません。  
-当サイトの情報を利用することによって生じた損害については一切の責任を負いかねますのでご了承ください。
+
+zzzmisa.com、及びサブドメインで公開しているサイト（以下「当サイト」）は、利用者ご自身の責任においてご利用いただきます。また、以下の各号につき予めご了承いただくものとします。
+
+1. 当サイトの瑕疵、当サイトの動作に係る不具合（表示情報の誤謬・逸脱を含みます）、当サイトが利用者の機器等に与える影響および利用者が当サイトを正常に利用できないことにより被る不利益、データ消失の不利益、その他一切の不利益について、当サイト運営者に故意または重大な過失がある場合を除き、当サイト運営者は一切その責任を負いません。また、利用者が当サイトを利用することにより、他の利用者または第三者に対して損害を与えた場合でも、利用者が自己の責任と費用でこれを解決するものとし、当サイト運営者は一切その責任を負いません。
+
+1. 当サイト運営者は、掲載された情報について、その完全性、正確性、確実性、有用性等に関して、いかなる保証もいたしません。利用者ご自身のご判断でご利用ください。掲載された情報、画像およびリンク等を利用することによって、利用者の損害が生じた場合でも、当サイト運営者は一切その責任を負いません。また、利用者が掲載された情報、画像およびリンク等を利用することで、他の利用者または第三者に対して損害を与えた場合でも、利用者が自己の責任と費用でこれを解決するものとし、当サイト運営者は一切その責任を負いません。
+
+1. 当サイト運営者は、当サイトからリンクされた第三者が運営するサイトに関して、いかなる保証もいたしません。利用者ご自身のご判断でご利用ください。また、リンク先で生じた損害や、利用者同士のトラブル等に対し、当サイト運営者は一切の補償及び関与をいたしません。
 
 また、当サイト内のそれぞれのページで上記以外の注意事項を記述している場合もございます。併せてお読みください。
