このブログについてを更新

--- a/content/2016-12-15_about.md
+++ b/content/2016-12-15_about.md
@@ -1,6 +1,6 @@
 +++
 date = "2016-12-15"
-lastmod = "2017-09-03"
+lastmod = "2019-08-19"
 title = "このブログについて"
 slug = "about"
 tags = [
@@ -10,16 +10,16 @@ thumbnail = "images/author.jpg"
 draft = false
 +++
 
-ブログというものを試してみたくて作ったブログです。  
-アウトプットしたいことがある時に記事を書きます。
-
 投稿内容は私個人の意見であり所属する企業の公式なものではありません。  
 連絡は[こちら](https://goo.gl/forms/kkSZGTnzawp4fr552/)から。
 
+## プロフィール
 * 名前: ミサ
-* 職業: ITエンジニア
-* マイブーム: 英語の勉強、インコカフェ巡り、サイクリング（春と秋だけ）
-* [英語ブログ](http://odekake.zzzmisa.com/)もやってます
+* 職業: ソフトウェアエンジニア
+* 趣味: プログラミング、英語の勉強、インコカフェ巡り
+* [ホームページ](https://zzzmisa.com/)
+* [Twitter](https://twitter.com/zzzmisa/)
+* [Github](https://github.com/zzzmisa)
 * [ほしいものリスト](http://amzn.asia/8D0eZTt/)
 
 ## 権利表記
