guillanbarreの記事におすすめアイテム追加

--- a/content/2016-12-28_ギラン・バレー症候群闘病記.md
+++ b/content/2016-12-28_ギラン・バレー症候群闘病記.md
@@ -130,3 +130,9 @@ PC操作に関しては、発症9日目から試してみました。
 **思ったより早く治って良かった！**  
 早めに適切な診断と治療をしてもらえて良かったです。  
 ネットでギラン・バレー症候群を検索すると、重症の方の闘病記が多くて怖くなりますが、症状にはかなり個人差があるみたいです（軽症の人はそこまで書き残さないでしょうし）。
+
+## ギラン・バレー症候群おすすめアイテム
+1. [バンカーリング](https://amzn.to/30EFNUr)  
+これを使えば、手に力が入らなくてもスマホが持てます！
+2. [スポンジハンドル](https://amzn.to/2HHsrj9)  
+これを使えば、手に力が入らなくてもスプーンや歯ブラシが持ちやすいです！
