Update a post curryjack

--- a/content/2019-12-23_カレージャック.md
+++ b/content/2019-12-23_カレージャック.md
@@ -17,7 +17,7 @@ draft = false
 
 ---
 
-オープンデータのカレー画像を使ったゲームアプリ [カレージャック](https://curryjack.zzzmisa.com/) を作りました！  
+オープンデータのカレー画像を使ったゲームアプリ *[カレージャック](https://curryjack.zzzmisa.com/)* を作りました！  
 
 * デモ: https://curryjack.zzzmisa.com/
 * ソース: https://github.com/zzzmisa/curryjack
@@ -66,7 +66,7 @@ draft = false
 名前はカレーネコと言います。
 
 ## まとめ
-一度で飽きるかもしれないけど、*[とにかく一度遊んでみてね！](https://curryjack.zzzmisa.com/)*
+一度で飽きるかもしれないけど、**[とにかく一度遊んでみてね！](https://curryjack.zzzmisa.com/)**
 
 {{% img src="images/curryjack1.jpg" w="390" h="262" caption="夜にやらない方がいいよ" href="https://curryjack.zzzmisa.com/" %}}
 
